fabrik/internal/engine/testdata/middleware_errors.txt
Middleware misuse: wrong signature, methods, bad names, code references.
-- go.mod --
module app

go 1.26
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- web/web.go --
package web

import "net/http"

//fabrik:http:middleware
func Wrong(s string) string { return s }

type T struct{}

//fabrik:http:middleware
func (t *T) Method(next http.Handler) http.Handler { return next }

//fabrik:http:middleware name=No.Cache
func BadName(next http.Handler) http.Handler { return next }

//fabrik:http:middleware name=twice
func First(next http.Handler) http.Handler { return next }

//fabrik:http:middleware name=twice
func Second(next http.Handler) http.Handler { return next }

//fabrik:http GET /a middleware=bad-ref
func A(w http.ResponseWriter, r *http.Request) {}

//fabrik:http GET /b middleware=shared.RequireAuth
func B(w http.ResponseWriter, r *http.Request) {}
-- want/diags --
error: web/web.go:5:1: middleware Wrong has the wrong signature
  help: want func(next http.Handler) http.Handler
error: web/web.go:10:1: //fabrik:http:middleware must be on a package-level function (func Method is a method)
  help: move the middleware out of the method set
error: web/web.go:13:31: invalid middleware name "No.Cache"
  help: use a short identifier: name=auth
error: web/web.go:19:1: duplicate middleware name "twice"
  help: first declared at $WORK/web/web.go:16:1
error: web/web.go:22:33: invalid middleware name "bad-ref"
  help: use declared names, comma-separated: middleware=auth,audit
error: web/web.go:25:33: middleware "shared.RequireAuth" references code; middleware= takes declared names
  help: declare //fabrik:http:middleware name=<name> on the function and reference the name
